FEAT : 내역 카테고리 볼 수 있도록